FIX: Swagger, addSegment method
